[tool.poetry]
name = "vcenter-api-client"
version = "0.1.0"
description = ""
authors = ["mrtstg <mrtstgdev@gmail.com>"]
license = "BSD-3-Clause"
readme = "README.md"
packages = [{include = "vcenter_api_client"}]

[tool.poetry.dependencies]
python = "^3.10"
httpx = "^0.23.1"
pyvmomi = "^8.0.0.1.1"

[tool.poetry.group.dev.dependencies]
pytest = "^7.2.0"
pytest-xdist = "^3.1.0"
pytest-cov = "^4.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
